/*****************    pb规范   *******************************************
1.用pascal规则(每个单词首字段都用大写)命名message消息类型
2.用camel规则(第一个字母小写，余下单词首字母大写)命名字段名
3.全大写命名extend消息类型的字段名
4.string统一采用utf8编码
5.除unixtime、32位网络IP用fixed32外，其余无符号都用uint32，有符号用sint32
6.result用无符号:0代表成功，错误码全局分段管理,高24位用于分段，低8位为具体错误
*************************************************************************/

package MIStore;


message StoreReqPacket{
	optional uint32 seq=1;    //序列号
	optional uint32 appId=2;  //业务ID
	optional uint64 miUin=3;  //用户ID
	optional string qua=4;
	optional string serviceCmd=5;//"mstore.get" "mstore.getall"  "mstore.multiget" "mstore.set" "mstore.del" "mstore.setoption" "mstore.getoption"
	optional ClientIpInfo ipInfo=6; //客户端IP信息
	optional bytes  busiBuff=7;  	//业务数据包
	optional bytes  extra=8;     	//附加信息,自定义
	optional uint32 flag=9;
	optional uint32 sessionId=10;
	optional string miUid=11;       //string 类型的小米用户帐号
}


message ClientIpInfo{
	optional uint32 ipType=1;     //1表示IPv4, 2表示IPv6
	optional uint32 clientPort=2; //客户端端口
	optional uint32 clientIpV4=3; //IPV4
	optional bytes  clientIpV6=4; //IPV6
}